<resources>
    <string name="app_name">RealEstateManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close drawer navigation</string>
    <string name="no_photo_choosen">no photo chosen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kind_of_real_estate">Kind of real estate</string>
    <string name="full_description">Full description:</string>
    <string name="number_of_room">Number of room:</string>
    <string name="number_of_bathroom">Number of bathroom:</string>
    <string name="number_of_bedroom">Number of bedroom:</string>
    <string name="st_number">St. number:</string>
    <string name="street_name">Street name:</string>
    <string name="zip_code">Zip code:</string>
    <string name="country">Country:</string>
    <string name="surface">Surface:</string>
    <string name="price">Price:</string>
    <string name="school">School</string>
    <string name="market">Market</string>
    <string name="park">Park</string>
    <string name="bus">Bus</string>
    <string name="subway">Subway</string>
    <string name="restaurant">Restaurant</string>
    <string name="sport_club">Sport club</string>
    <string name="pool">Pool</string>
    <string name="stadium">Stadium</string>
    <string name="login_now">Login Now</string>
    <string name="please_enter_the_details_below_to_continue">Please enter the details below to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="add_caption">Add caption</string>
    <string name="apartment">Apartment</string>
    <string name="loft">Loft</string>
    <string name="duplex">Duplex</string>
    <string name="house">House</string>
    <string name="villa">Villa</string>
    <string name="city">City:</string>
    <string name="price_interval">Price interval:</string>
    <string name="surface_interval">Surface interval:</string>
    <string name="studio">Studio</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5+</string>
    <string name="_1">1</string>
    <string name="_3plus">3+</string>
    <string name="point_of_interest">Point of interest:</string>
    <string name="has_picture">Has picture:</string>
    <string name="_1plus">1+</string>
    <string name="_2plus">2+</string>
    <string name="for_sales_date">For sales\' date:</string>
    <string name="before">Before</string>
    <string name="in_between">In between</string>
    <string name="after">After</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="your_information">Your information</string>
    <string name="modify">Modify</string>
    <string name="calculation">Calculation</string>
    <string name="years">Years:</string>
    <string name="percent">Percent:</string>
    <string name="how_much_to_borrow">How much to borrow:</string>
    <string name="loan_calculator">Loan calculator</string>
    <string name="add_a_real_estate">Add a real estate</string>
    <string name="no_account_was_found_n_maybe_try_again_or_register">No account was found \n maybe try again or register</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="choose_sale_s_date">Choose sale\'s date</string>
    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="location">Location</string>
    <string name="point_of_interest_">Point of interest</string>
    <string-array name="type">
        <item>Apartment</item>
        <item>Loft</item>
        <item>Duplex</item>
        <item>Studio</item>
        <item>Villa</item>
        <item>House</item>
    </string-array>

    <string-array name="caption_picture">
        <item>No caption</item>
        <item>Kitchen</item>
        <item>Bathroom</item>
        <item>Salon</item>
        <item>Bedroom</item>
        <item>Toilet</item>
    </string-array>
</resources>