<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_corner_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_huge">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_sale_s_date"
                android:textSize="@dimen/categoryTitle"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <DatePicker
                android:id="@+id/calendar_sold_apartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    app:cardCornerRadius="@dimen/radius_corner">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="@dimen/radius_corner">

                        <Button
                            android:id="@+id/cancel_button_dialog_sold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:text="@string/cancel"
                            style="?android:attr/borderlessButtonStyle"
                            android:textColor="@color/colorSecondary" />
                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    app:cardCornerRadius="@dimen/radius_corner">

                    <Button
                        android:id="@+id/save_button_dialog_sold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@color/colorSecondary"
                        android:text="@string/save"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>