<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_huge"
        app:cardCornerRadius="@dimen/radius_corner_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_big"
                android:text="@string/add_caption"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/categoryTitle"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageview_dialog_caption"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_big" />

            <Spinner
                android:id="@+id/spinner_dialog_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    app:cardCornerRadius="@dimen/radius_corner">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        app:cardCornerRadius="@dimen/radius_corner"
                        app:cardElevation="0dp">

                        <Button
                            android:id="@+id/cancel_dialog_caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:text="@string/cancel"
                            style="?android:attr/borderlessButtonStyle"
                            android:textColor="@color/colorSecondary" />
                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    app:cardCornerRadius="@dimen/radius_corner">

                    <Button
                        android:id="@+id/save_button_caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_tiny"
                        android:background="@color/colorSecondary"
                        android:text="@string/register"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>